Reformat Elasticsearch source